# OPC_UA

examples/: server.c  server.cpp  server_datasource.c  server_variable.c
include/: ua_server.h
server_example/: CMakeLists.txt  pi.cmake
src/server/: ua_server.c
